fix: tcr integration
* close #151 * rewrote the whole thing because it seemed to be broken in
multiple areas due to the new popup sidepanel

--- a/integrations/tabcenter-reborn/cascade-tcr.css
+++ b/integrations/tabcenter-reborn/cascade-tcr.css
@@ -1,58 +1,84 @@
-#TabsToolbar {
-  display: none !important;
+/* when TCR is active */
+#main-window:has(#sidebar-box[sidebarcommand*="tabcenter"]:not([hidden])) {
+    /* hide tab bar */
+    #TabsToolbar {
+        display: none !important;
+    }
+
+    /* ensure nav bar is full width (for oneline layout) */
+    #nav-bar {
+        width: 100vw !important;
+    }
+
+    #browser {
+        position: relative !important;
+
+        #tabbrowser-tabbox {
+            margin-left: 50px !important;
+        }
+
+        & #sidebar {
+            border-radius: 0px !important;
+            outline: none !important;
+
+            /*not sure if needed*/
+            height: 100%;
+            max-height: 100%;
+
+            /* expand on hover */
+            /*&:hover {
+                min-width: 10vw !important;
+                width: 30vw !important;
+                max-width: 250px !important;
+            }*/
+        }
+
+        #sidebar-box[sidebarcommand*="tabcenter"] {
+            display: block;
+
+            position: absolute !important;
+            top: 0;
+            bottom: 0;
+            z-index: 3 !important;
+            transition: all 0.2s ease;
+            overflow: hidden;
+
+            min-width: 50px !important;
+            max-width: 50px !important;
+            padding-bottom: 0px !important;
+
+            &:hover {
+                max-width: 250px !important;
+            }
+
+            /* remove sidebar separator */
+            & ~ #sidebar-splitter {
+                display: none;
+            }
+
+            /* make full height as we are positioning absolutely */
+            .sidebar-browser-stack {
+                height: 100%;
+            }
+        }
+
+        /* hide sidebar */
+        #sidebar-main {
+            display: none;
+        }
+    }
 }
-#nav-bar {
-  width: 100vw !important;
+
+/* hide panel title */
+#sidebar-panel-header {
+    display: none !important;
 }
 
-#browser {
-  position: relative;
-}
-#sidebar-box[sidebarcommand*="tabcenter"] #sidebar-header {
-  display: none;
-}
-
-#sidebar-box[sidebarcommand*="tabcenter"]:not([hidden]) {
-  display: block;
-
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  z-index: 3;
-
-  min-width: 50px !important;
-  max-width: 50px !important;
-
-  border-right: none;
-
-  transition: all 0.2s ease;
-
-  overflow: hidden;
-}
-
-[sidebarcommand*="tabcenter"] #sidebar,
-#sidebar-box[sidebarcommand*="tabcenter"]:hover {
-  min-width: 10vw !important;
-  width: 30vw !important;
-  max-width: 250px !important;
-}
-
-[sidebarcommand*="tabcenter"] #sidebar {
-  height: 100%;
-  max-height: 100%;
-}
-
-#browser:has(#sidebar-box[sidebarcommand*="tabcenter"]:not([hidden]))
-  #tabbrowser-tabbox {
-  margin-left: 50px !important;
-}
-#main-window[inFullscreen][inDOMFullscreen] #tabbrowser-tabbox {
-  margin-left: 0 !important;
-}
-/* Removes gap between active tab highlight and edge of bar */
-#sidebar-box[sidebarcommand="tabcenter-reborn_ariasuni-sidebar-action"]
-  #sidebar-header,
-#sidebar-box[sidebarcommand="tabcenter-reborn_ariasuni-sidebar-action"]
-  ~ #sidebar-splitter {
-  display: none;
+/* needed to increase specifity, remove sidebar gap when in fullscreen */
+#main-window[inFullscreen][inDOMFullscreen]:has(
+        #sidebar-box[sidebarcommand*="tabcenter"]:not([hidden])
+    )
+    #browser
+    #tabbrowser-tabbox {
+    margin-left: 0px !important;
 }
